--- a/core/resources/src/main/res/values-ar/strings.xml
+++ b/core/resources/src/main/res/values-ar/strings.xml
@@ -2091,4 +2091,6 @@
     <string name="adaptive_sub">يضبط الفيزياء على أساس سرعة القذف</string>
     <string name="accessibility_aware_sub">يحترم إعدادات إمكانية الوصول إلى النظام</string>
     <string name="reduced_motion_sub">الحد الأدنى من الحركة لتلبية احتياجات الوصول</string>
+    <string name="primary_lines">الخطوط الأولية</string>
+    <string name="primary_lines_sub">يضيف خطًا أكثر سمكًا في كل سطر خامس</string>
 </resources>
