--- a/core/resources/src/main/res/values-et/strings.xml
+++ b/core/resources/src/main/res/values-et/strings.xml
@@ -2087,4 +2087,6 @@
     <string name="adaptive_sub">Reguleerib füüsikat paiskamiskiiruse alusel</string>
     <string name="accessibility_aware_sub">Austab süsteemi juurdepääsetavuse sätteid</string>
     <string name="reduced_motion_sub">Minimaalne liikumine juurdepääsetavuse vajadustele</string>
+    <string name="primary_lines">Põhiliinid</string>
+    <string name="primary_lines_sub">Lisab paksema joone igal viiendal real</string>
 </resources>
