--- a/core/resources/src/main/res/values-lt/strings.xml
+++ b/core/resources/src/main/res/values-lt/strings.xml
@@ -2090,4 +2090,6 @@
     <string name="adaptive_sub">Koreguoja fiziką pagal svaidymo greitį</string>
     <string name="accessibility_aware_sub">Gerbia sistemos prieinamumo nustatymus</string>
     <string name="reduced_motion_sub">Minimalus judėjimas pasiekiamumo poreikiams</string>
+    <string name="primary_lines">Pirminės linijos</string>
+    <string name="primary_lines_sub">Kas penktą eilutę prideda storesnė linija</string>
 </resources>
