--- a/core/resources/src/main/res/values-mr/strings.xml
+++ b/core/resources/src/main/res/values-mr/strings.xml
@@ -2088,4 +2088,6 @@
     <string name="adaptive_sub">फ्लिंग वेगावर आधारित भौतिकशास्त्र समायोजित करते</string>
     <string name="accessibility_aware_sub">सिस्टम प्रवेशयोग्यता सेटिंग्जचा आदर करते</string>
     <string name="reduced_motion_sub">प्रवेशयोग्यता गरजांसाठी किमान गती</string>
+    <string name="primary_lines">प्राथमिक ओळी</string>
+    <string name="primary_lines_sub">प्रत्येक पाचव्या ओळीत जाड ओळ जोडते</string>
 </resources>
