--- a/core/resources/src/main/res/values-sr/strings.xml
+++ b/core/resources/src/main/res/values-sr/strings.xml
@@ -2088,4 +2088,6 @@
     <string name="adaptive_sub">Подешава физику на основу брзине бацања</string>
     <string name="accessibility_aware_sub">Поштује подешавања приступачности система</string>
     <string name="reduced_motion_sub">Минимално кретање за потребе приступачности</string>
+    <string name="primary_lines">Примари Линес</string>
+    <string name="primary_lines_sub">Додаје дебљу линију сваке пете линије</string>
 </resources>
