--- a/core/resources/src/main/res/values-sv/strings.xml
+++ b/core/resources/src/main/res/values-sv/strings.xml
@@ -2088,4 +2088,6 @@
     <string name="adaptive_sub">Justerar fysiken baserat på flinghastighet</string>
     <string name="accessibility_aware_sub">Respekterar systemtillgänglighetsinställningar</string>
     <string name="reduced_motion_sub">Minimal rörelse för tillgänglighetsbehov</string>
+    <string name="primary_lines">Primära linjer</string>
+    <string name="primary_lines_sub">Lägger till tjockare linje var femte rad</string>
 </resources>
