--- a/core/resources/src/main/res/values-tr/strings.xml
+++ b/core/resources/src/main/res/values-tr/strings.xml
@@ -2087,4 +2087,6 @@
     <string name="adaptive_sub">Fırlatma hızına göre fiziği ayarlar</string>
     <string name="accessibility_aware_sub">Sistem erişilebilirlik ayarlarına saygı duyar</string>
     <string name="reduced_motion_sub">Erişilebilirlik ihtiyaçları için minimum hareket</string>
+    <string name="primary_lines">Ana Hatlar</string>
+    <string name="primary_lines_sub">Her beşinci satırda bir daha kalın çizgi ekler</string>
 </resources>
