--- a/core/resources/src/main/res/values-uk/strings.xml
+++ b/core/resources/src/main/res/values-uk/strings.xml
@@ -2089,4 +2089,6 @@
     <string name="adaptive_sub">Коригує фізику на основі швидкості метання</string>
     <string name="accessibility_aware_sub">Поважає налаштування доступності системи</string>
     <string name="reduced_motion_sub">Мінімальний рух для потреб у доступності</string>
+    <string name="primary_lines">Первинні лінії</string>
+    <string name="primary_lines_sub">Кожний п’ятий рядок додає товстішу лінію</string>
 </resources>
