--- a/core/resources/src/main/res/values-vi/strings.xml
+++ b/core/resources/src/main/res/values-vi/strings.xml
@@ -2086,4 +2086,6 @@
     <string name="adaptive_sub">Điều chỉnh vật lý dựa trên tốc độ ném</string>
     <string name="accessibility_aware_sub">Tôn trọng cài đặt khả năng truy cập của hệ thống</string>
     <string name="reduced_motion_sub">Chuyển động tối thiểu cho nhu cầu tiếp cận</string>
+    <string name="primary_lines">Dòng chính</string>
+    <string name="primary_lines_sub">Thêm dòng dày hơn vào mỗi dòng thứ năm</string>
 </resources>
