Added ability to fill outlined shapes with color in draw tool by #2492

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2110,4 +2110,5 @@
     <string name="reduced_motion_sub">Minimal motion for accessibility needs</string>
     <string name="primary_lines">Primary Lines</string>
     <string name="primary_lines_sub">Adds thicker line every fifth line</string>
+    <string name="fill_color">Fill Color</string>
 </resources>
