Added setting to hide tools in share menu by #2491

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2111,4 +2111,6 @@
     <string name="primary_lines">Primary Lines</string>
     <string name="primary_lines_sub">Adds thicker line every fifth line</string>
     <string name="fill_color">Fill Color</string>
+    <string name="hidden_tools">Hidden Tools</string>
+    <string name="hidden_for_share">Tools Hidden For Share</string>
 </resources>
