Added setting to hide tools in share menu by #2491

--- a/core/resources/src/main/res/values-ar/strings.xml
+++ b/core/resources/src/main/res/values-ar/strings.xml
@@ -2093,4 +2093,7 @@
     <string name="reduced_motion_sub">الحد الأدنى من الحركة لتلبية احتياجات الوصول</string>
     <string name="primary_lines">الخطوط الأولية</string>
     <string name="primary_lines_sub">يضيف خطًا أكثر سمكًا في كل سطر خامس</string>
+    <string name="fill_color">لون التعبئة</string>
+    <string name="hidden_tools">الأدوات المخفية</string>
+    <string name="hidden_for_share">أدوات مخفية للمشاركة</string>
 </resources>
