--- a/core/resources/src/main/res/values-be/strings.xml
+++ b/core/resources/src/main/res/values-be/strings.xml
@@ -2091,4 +2091,7 @@
     <string name="reduced_motion_sub">Мінімальны рух для патрэб даступнасці</string>
     <string name="primary_lines">Першасныя лініі</string>
     <string name="primary_lines_sub">Дадае больш тоўстую лінію кожны пяты радок</string>
+    <string name="fill_color">Колер залівання</string>
+    <string name="hidden_tools">Схаваныя інструменты</string>
+    <string name="hidden_for_share">Інструменты, схаваныя для абмену</string>
 </resources>
