--- a/core/resources/src/main/res/values-cs/strings.xml
+++ b/core/resources/src/main/res/values-cs/strings.xml
@@ -2091,4 +2091,7 @@
     <string name="reduced_motion_sub">Minimální pohyb pro potřeby dostupnosti</string>
     <string name="primary_lines">Primární linky</string>
     <string name="primary_lines_sub">Přidá silnější čáru každý pátý řádek</string>
+    <string name="fill_color">Barva výplně</string>
+    <string name="hidden_tools">Skryté nástroje</string>
+    <string name="hidden_for_share">Nástroje skryté pro sdílení</string>
 </resources>
