--- a/core/resources/src/main/res/values-de/strings.xml
+++ b/core/resources/src/main/res/values-de/strings.xml
@@ -2089,4 +2089,7 @@
     <string name="reduced_motion_sub">Minimale Bewegung für Zugänglichkeitsanforderungen</string>
     <string name="primary_lines">Primäre Linien</string>
     <string name="primary_lines_sub">Fügt jede fünfte Zeile eine dickere Linie hinzu</string>
+    <string name="fill_color">Füllfarbe</string>
+    <string name="hidden_tools">Versteckte Werkzeuge</string>
+    <string name="hidden_for_share">Zum Teilen ausgeblendete Tools</string>
 </resources>
