--- a/core/resources/src/main/res/values-fa/strings.xml
+++ b/core/resources/src/main/res/values-fa/strings.xml
@@ -2089,4 +2089,7 @@
     <string name="reduced_motion_sub">حداقل حرکت برای نیازهای دسترسی</string>
     <string name="primary_lines">خطوط اولیه</string>
     <string name="primary_lines_sub">هر خط پنجم خط ضخیم‌تری اضافه می‌کند</string>
+    <string name="fill_color">رنگ را پر کنید</string>
+    <string name="hidden_tools">ابزارهای پنهان</string>
+    <string name="hidden_for_share">ابزارهای پنهان برای اشتراک گذاری</string>
 </resources>
