--- a/core/resources/src/main/res/values-hi/strings.xml
+++ b/core/resources/src/main/res/values-hi/strings.xml
@@ -2089,4 +2089,7 @@
     <string name="reduced_motion_sub">पहुंच आवश्यकताओं के लिए न्यूनतम गति</string>
     <string name="primary_lines">प्राथमिक पंक्तियाँ</string>
     <string name="primary_lines_sub">प्रत्येक पाँचवीं पंक्ति में मोटी रेखा जोड़ता है</string>
+    <string name="fill_color">रंग भरना</string>
+    <string name="hidden_tools">छिपे हुए उपकरण</string>
+    <string name="hidden_for_share">साझा करने के लिए छिपे हुए उपकरण</string>
 </resources>
