--- a/core/resources/src/main/res/values-hu/strings.xml
+++ b/core/resources/src/main/res/values-hu/strings.xml
@@ -2089,4 +2089,7 @@
     <string name="reduced_motion_sub">Minimális mozgás a hozzáférhetőségi igényekhez</string>
     <string name="primary_lines">Elsődleges vonalak</string>
     <string name="primary_lines_sub">Minden ötödik sor vastagabb vonalat ad hozzá</string>
+    <string name="fill_color">Kitöltés színe</string>
+    <string name="hidden_tools">Rejtett eszközök</string>
+    <string name="hidden_for_share">Megosztáshoz rejtett eszközök</string>
 </resources>
