--- a/core/resources/src/main/res/values-in/strings.xml
+++ b/core/resources/src/main/res/values-in/strings.xml
@@ -2088,4 +2088,7 @@
     <string name="reduced_motion_sub">Gerakan minimal untuk kebutuhan aksesibilitas</string>
     <string name="primary_lines">Jalur Utama</string>
     <string name="primary_lines_sub">Menambahkan garis tebal setiap baris kelima</string>
+    <string name="fill_color">Isi Warna</string>
+    <string name="hidden_tools">Alat Tersembunyi</string>
+    <string name="hidden_for_share">Alat Tersembunyi Untuk Dibagikan</string>
 </resources>
