--- a/core/resources/src/main/res/values-it/strings.xml
+++ b/core/resources/src/main/res/values-it/strings.xml
@@ -2089,4 +2089,7 @@
     <string name="reduced_motion_sub">Movimento minimo per esigenze di accessibilità</string>
     <string name="primary_lines">Linee primarie</string>
     <string name="primary_lines_sub">Aggiunge una linea più spessa ogni quinta linea</string>
+    <string name="fill_color">Colore riempimento</string>
+    <string name="hidden_tools">Strumenti nascosti</string>
+    <string name="hidden_for_share">Strumenti nascosti per la condivisione</string>
 </resources>
