--- a/core/resources/src/main/res/values-iw/strings.xml
+++ b/core/resources/src/main/res/values-iw/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="exception">חריג</string>
     <string name="edit_exif">ערוך EXIF</string>
     <string name="save">שמור</string>
@@ -2089,4 +2091,7 @@
     <string name="reduced_motion_sub">תנועה מינימלית לצרכי נגישות</string>
     <string name="primary_lines">קווים ראשיים</string>
     <string name="primary_lines_sub">מוסיף קו עבה יותר בכל שורה חמישית</string>
+    <string name="fill_color">צבע מילוי</string>
+    <string name="hidden_tools">כלים נסתרים</string>
+    <string name="hidden_for_share">כלים מוסתרים לשיתוף</string>
 </resources>
