--- a/core/resources/src/main/res/values-lt/strings.xml
+++ b/core/resources/src/main/res/values-lt/strings.xml
@@ -2092,4 +2092,7 @@
     <string name="reduced_motion_sub">Minimalus judėjimas pasiekiamumo poreikiams</string>
     <string name="primary_lines">Pirminės linijos</string>
     <string name="primary_lines_sub">Kas penktą eilutę prideda storesnė linija</string>
+    <string name="fill_color">Užpildymo spalva</string>
+    <string name="hidden_tools">Paslėpti įrankiai</string>
+    <string name="hidden_for_share">Įrankiai, paslėpti bendrinimui</string>
 </resources>
