--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2091,4 +2091,7 @@
     <string name="reduced_motion_sub">Минимальное движение для обеспечения доступности</string>
     <string name="primary_lines">Первичные линии</string>
     <string name="primary_lines_sub">Добавляет более толстую линию каждую пятую строку.</string>
+    <string name="fill_color">Цвет заливки</string>
+    <string name="hidden_tools">Скрытые инструменты</string>
+    <string name="hidden_for_share">Инструменты, скрытые для общего доступа</string>
 </resources>
