--- a/core/resources/src/main/res/values-sr/strings.xml
+++ b/core/resources/src/main/res/values-sr/strings.xml
@@ -2090,4 +2090,7 @@
     <string name="reduced_motion_sub">Минимално кретање за потребе приступачности</string>
     <string name="primary_lines">Примари Линес</string>
     <string name="primary_lines_sub">Додаје дебљу линију сваке пете линије</string>
+    <string name="fill_color">Филл Цолор</string>
+    <string name="hidden_tools">Скривени алати</string>
+    <string name="hidden_for_share">Алати скривени за дељење</string>
 </resources>
