--- a/core/resources/src/main/res/values-th/strings.xml
+++ b/core/resources/src/main/res/values-th/strings.xml
@@ -2088,4 +2088,7 @@
     <string name="reduced_motion_sub">การเคลื่อนไหวน้อยที่สุดสำหรับความต้องการในการเข้าถึง</string>
     <string name="primary_lines">สายหลัก</string>
     <string name="primary_lines_sub">เพิ่มเส้นหนาทุกๆ บรรทัดที่ห้า</string>
+    <string name="fill_color">เติมสี</string>
+    <string name="hidden_tools">เครื่องมือที่ซ่อนอยู่</string>
+    <string name="hidden_for_share">เครื่องมือที่ซ่อนอยู่เพื่อการแบ่งปัน</string>
 </resources>
