--- a/core/resources/src/main/res/values-tr/strings.xml
+++ b/core/resources/src/main/res/values-tr/strings.xml
@@ -2089,4 +2089,7 @@
     <string name="reduced_motion_sub">Erişilebilirlik ihtiyaçları için minimum hareket</string>
     <string name="primary_lines">Ana Hatlar</string>
     <string name="primary_lines_sub">Her beşinci satırda bir daha kalın çizgi ekler</string>
+    <string name="fill_color">Dolgu Rengi</string>
+    <string name="hidden_tools">Gizli Araçlar</string>
+    <string name="hidden_for_share">Paylaşım İçin Gizlenen Araçlar</string>
 </resources>
