--- a/core/resources/src/main/res/values-zh-rTW/strings.xml
+++ b/core/resources/src/main/res/values-zh-rTW/strings.xml
@@ -2088,4 +2088,7 @@
     <string name="reduced_motion">减少运动</string>
     <string name="primary_lines">主要线路</string>
     <string name="primary_lines_sub">每五行添加较粗的线</string>
+    <string name="fill_color">填充颜​​色</string>
+    <string name="hidden_tools">隐藏工具</string>
+    <string name="hidden_for_share">隐藏共享工具</string>
 </resources>
